feat: add meld gitconfig

--- a/.chezmoi.yaml.tmpl
+++ b/.chezmoi.yaml.tmpl
@@ -98,6 +98,7 @@ See:
   "just"
   "kitty"
   "lazygit"
+  "meld"
   "nvim"
   "pass"
   "perm"
@@ -137,6 +138,7 @@ See:
   "just"
   "kitty"
   "lazygit"
+  "meld"
   "nvim"
   "pass"
   "perm"
