--- a/.chezmoiscripts/run_once_install-flatpak.tmpl
+++ b/.chezmoiscripts/run_once_install-flatpak.tmpl
@@ -20,6 +20,7 @@ fi
 
 echo "⚙️ Configuring flathub"
 flatpak remote-add --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
+flatpak remote-add --user --if-not-exists flathub https://dl.flathub.org/repo/flathub.flatpakrepo
 
 {{- end -}}
 
